syntax = "proto3";

package messages;

service GrpcMessagingService {
  rpc postMessage(TextMessage) returns (Response);
  rpc getMessages(Client) returns (Response);
  rpc getUpdateStream(Client) returns (stream TextMessage);
}

message Response {
  enum ResponseType {
    OK = 0;
    ERR = 1;
  }
  ResponseType type = 1;
}

message TextMessage {
  enum MessageType {
    CONTENT = 0;
    TYPING_START = 1;
    TYPING_END = 2;
    ACK = 3;
  }

  int32 id = 1;
  int32 to = 2;
  int32 from = 3;
  string message = 4;
  bool seen = 7;
  string createdAt = 5;
  MessageType type = 6;
}

message Client { int32 id = 1; }